Bug 77589 - [r600g] Source engine game stopped working (bisected)
Summary: [r600g] Source engine game stopped working (bisected)
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium blocker
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 77449
  Show dependency treegraph
 
Reported: 2014-04-17 19:09 UTC by Benjamin Bellec
Modified: 2014-04-18 13:21 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Gnome proposing to quit the app (637.18 KB, image/png)
2014-04-17 19:09 UTC, Benjamin Bellec
Details

Description Benjamin Bellec 2014-04-17 19:09:04 UTC
Created attachment 97529 [details]
Gnome proposing to quit the app

All my Source engine games (Team Fortress 2, Left 4 Dead 2, Half-Life², Counter-Strike: Source) doesn't work anymore since commit:

commit: 70cf6639c331342619e65c46db925d115bf51920
gallium/radeon: create and return a fence in the flush function
author: Marek Olšák <marek.olsak@amd.com>
date: 2014-04-16 12:02:51 (GMT)
Reviewed-by: Christian König <christian.koenig@amd.com>

Since this commit, when I launch one of this game, the screen stays black or it will not launch at all. Finally I got a message from Gnome proposing to wait or quit the app (cf. screenshot).

Config:
kernel 3.13.9-100.fc19.x86_64
libdrm 2.4.53-1.fc20

AMD Evergreen (Radeon HD 5850)
OpenGL renderer string: Gallium 0.4 on AMD CYPRESS

Build config:
autogen.sh --with-gallium-drivers=r600 --with-dri-drivers= --enable-texture-float --disable-dri3 --disable-r600-llvm-compiler --disable-gallium-llvm --enable-32-bit CFLAGS="-O2 -m32" CXXFLAGS="-O2 -m32" --libdir=/usr/lib
Comment 1 Benjamin Bellec 2014-04-17 19:29:56 UTC
It also hits RV770.
Comment 2 VOT Productions 2014-04-17 21:09:13 UTC
Can reproduce bug on Radeon HD 7750 (radeonsi)
Comment 3 Penith Muncher 2014-04-17 21:50:35 UTC
can reproduce on AMD Radeon HD 6570 on r600g
Comment 4 Kertesz Laszlo 2014-04-17 22:40:29 UTC
Can reproduce on Radeon HD 8570D (IGP from A8-6500), r600g.
I tried L4D2, Day of defeat and No More Room in Hell, all did the same - one cpu @100%, black screen and just hang there. Nothing in the Steam console.
Comment 5 Marek Olšák 2014-04-18 11:38:38 UTC
This should be fixed by 352e06ddea1108bad1d2c6742fe3. Can you confirm?
Comment 6 Benjamin Bellec 2014-04-18 11:45:17 UTC
Yes I confirm this is now fixed.
Tested with Left 4 Dead 2 and Counter-Strike Source on Evergreen.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.