src/gallium/drivers/r600/r600_hw_context.c
@@ -236,7 +236,7 @@ void r600_context_gfx_flush(void *context, unsigned flags,
 	struct r600_context *ctx = context;
 	struct radeon_winsys_cs *cs = ctx->b.rings.gfx.cs;
 
-	if (cs->cdw == ctx->b.initial_gfx_cs_size)
+	if (cs->cdw == ctx->b.initial_gfx_cs_size && !fence)
 		return;
 
 	ctx->b.rings.gfx.flushing = true;
